--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -68,6 +68,10 @@ filter{
             dictionary_path => '/etc/logstash/enrichment/TorNodes.yml'
             refresh_behaviour => "replace"
         }
+
+        mutate {
+            remove_field => "[message]"
+        }
     }
 
     #Log4J Pattern
@@ -75,6 +79,9 @@ filter{
         csv{
             columns => ["long_log_timestamp","event_time","company_name","product_name","log_type_stamp","pfversion","event_type","cycle_id","channel_id","event_type","source_id","target_id","is_success","non_success_cause"]
             separator => "| "
+        }
+        mutate {
+            remove_field => "[message]"
         }
     }
 
@@ -154,6 +161,10 @@ filter{
             fallback => "No"
             dictionary_path => '/etc/logstash/enrichment/TorNodes.yml'
             refresh_behaviour => "replace"
+        }
+
+        mutate {
+            remove_field => "[message]"
         }
     }
 
