Have removed orig message cleaning in logstash for troubleshooting

--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -69,9 +69,9 @@ filter{
             refresh_behaviour => "replace"
         }
 
-        mutate {
-            remove_field => "[message]"
-        }
+        #mutate {
+        #    remove_field => "[message]"
+        #}
     }
 
     #Log4J Pattern
@@ -80,9 +80,9 @@ filter{
             columns => ["long_log_timestamp","event_time","company_name","product_name","log_type_stamp","pfversion","event_type","cycle_id","channel_id","event_type","source_id","target_id","is_success","non_success_cause"]
             separator => "| "
         }
-        mutate {
-            remove_field => "[message]"
-        }
+        #mutate {
+        #    remove_field => "[message]"
+        #}
     }
 
     if([log_type] == "PD_Access_Log"){
@@ -124,9 +124,9 @@ filter{
             refresh_behaviour => "replace"
         }
 
-        mutate {
-            remove_field => "[message]"
-        }
+        #mutate {
+        #    remove_field => "[message]"
+        #}
     }
 
     if([log_type] == "PF_System_Log"){
@@ -134,6 +134,10 @@ filter{
             source => "[message]"
             value_split => "="
         }
+
+        #mutate {
+        #    remove_field => "[message]"
+        #}
 
     }
 
@@ -163,9 +167,9 @@ filter{
             refresh_behaviour => "replace"
         }
 
-        mutate {
-            remove_field => "[message]"
-        }
+        #mutate {
+        #    remove_field => "[message]"
+        #}
     }
 
     if([log_type] == "PA_System_Log"){
