handle new line issue

--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -4,6 +4,10 @@ input {
         port => 20514
         type => syslog
         add_field => {"log_type" => "PF_Audit_Log"}
+        codec => multiline {
+            pattern => "^\s"
+            what => "previous"
+        }
     }
 
     syslog {
@@ -11,6 +15,10 @@ input {
         port => 20515
         type => syslog
         add_field => {"log_type" => "PF_Provisioner_Log"}
+        codec => multiline {
+            pattern => "^\s"
+            what => "previous"
+        }
     }
 
     syslog {
@@ -18,6 +26,10 @@ input {
         port => 20516
         type => syslog
         add_field => {"log_type" => "PD_Access_Log"}
+        codec => multiline {
+            pattern => "^\s"
+            what => "previous"
+        }
     }
 
     syslog {
@@ -25,6 +37,10 @@ input {
         port => 20517
         type => syslog
         add_field => {"log_type" => "PF_System_Log"}
+        codec => multiline {
+            pattern => "^\s"
+            what => "previous"
+        }
     }
 
     syslog {
@@ -32,6 +48,10 @@ input {
         port => 20518
         type => syslog
         add_field => {"log_type" => "PA_System_Log"}
+        codec => multiline {
+            pattern => "^\s"
+            what => "previous"
+        }
     }
 
     syslog {
@@ -39,6 +59,10 @@ input {
         port => 20519
         type => syslog
         add_field => {"log_type" => "PA_Audit_Log"}
+        codec => multiline {
+            pattern => "^\s"
+            what => "previous"
+        }
     }
 }
 
