multiline log parsing

--- a/elasticsearch-siem/enrichment_cache/AlienVaultIP.yml
+++ b/elasticsearch-siem/enrichment_cache/AlienVaultIP.yml
@@ -77044,3 +77044,525 @@
 "93.67.145.196": "YES"
 "93.55.117.4": "YES"
 "94.2.247.247": "YES"
+"1.1.151.191": "YES"
+"1.160.39.11": "YES"
+"1.168.25.176": "YES"
+"1.203.173.214": "YES"
+"1.246.223.223": "YES"
+"1.25.89.136": "YES"
+"1.32.52.234": "YES"
+"1.52.205.188": "YES"
+"1.53.27.95": "YES"
+"1.53.29.144": "YES"
+"1.58.167.36": "YES"
+"1.64.139.20": "YES"
+"1.69.2.229": "YES"
+"2.232.169.57": "YES"
+"2.91.135.231": "YES"
+"5.12.57.255": "YES"
+"5.149.35.167": "YES"
+"5.235.234.133": "YES"
+"5.95.16.173": "YES"
+"5.95.59.66": "YES"
+"13.75.69.86": "YES"
+"14.0.99.100": "YES"
+"14.113.230.51": "YES"
+"14.139.60.17": "YES"
+"14.168.164.228": "YES"
+"14.191.36.171": "YES"
+"14.241.121.104": "YES"
+"24.90.175.94": "YES"
+"27.186.180.217": "YES"
+"27.197.123.200": "YES"
+"27.2.69.60": "YES"
+"27.208.245.21": "YES"
+"27.64.12.142": "YES"
+"27.71.204.79": "YES"
+"27.74.241.170": "YES"
+"27.75.201.66": "YES"
+"31.132.134.15": "YES"
+"31.163.138.52": "YES"
+"31.163.147.70": "YES"
+"31.163.171.5": "YES"
+"31.173.200.245": "YES"
+"31.177.192.137": "YES"
+"31.43.108.250": "YES"
+"34.245.207.92": "YES"
+"34.70.157.44": "YES"
+"35.185.207.121": "YES"
+"35.241.121.72": "YES"
+"36.224.83.110": "YES"
+"36.226.12.47": "YES"
+"36.230.241.85": "YES"
+"36.236.189.32": "YES"
+"36.236.190.198": "YES"
+"36.237.199.5": "YES"
+"36.239.116.81": "YES"
+"36.72.144.204": "YES"
+"37.113.196.16": "YES"
+"37.143.160.74": "YES"
+"37.159.137.186": "YES"
+"37.202.94.158": "YES"
+"37.57.75.16": "YES"
+"38.132.99.216": "YES"
+"39.149.12.78": "YES"
+"39.80.53.165": "YES"
+"41.111.133.104": "YES"
+"41.157.65.63": "YES"
+"41.228.171.123": "YES"
+"41.38.105.194": "YES"
+"42.114.65.68": "YES"
+"42.117.141.105": "YES"
+"42.119.78.92": "YES"
+"42.122.172.253": "YES"
+"42.179.94.92": "YES"
+"42.7.177.8": "YES"
+"42.98.6.160": "YES"
+"43.240.10.117": "YES"
+"43.240.117.213": "YES"
+"45.164.72.142": "YES"
+"45.177.92.61": "YES"
+"45.177.94.148": "YES"
+"49.213.240.6": "YES"
+"49.81.219.230": "YES"
+"52.144.44.48": "YES"
+"58.244.209.157": "YES"
+"59.26.214.148": "YES"
+"60.18.216.216": "YES"
+"60.2.221.38": "YES"
+"60.216.104.198": "YES"
+"60.218.29.254": "YES"
+"60.248.142.92": "YES"
+"60.25.7.238": "YES"
+"60.54.99.31": "YES"
+"60.9.218.190": "YES"
+"61.220.213.106": "YES"
+"62.68.125.58": "YES"
+"61.95.235.48": "YES"
+"61.7.189.121": "YES"
+"61.62.24.37": "YES"
+"61.54.42.21": "YES"
+"61.224.89.216": "YES"
+"61.221.60.210": "YES"
+"62.98.11.94": "YES"
+"66.34.192.6": "YES"
+"66.203.191.234": "YES"
+"64.62.199.194": "YES"
+"64.231.84.72": "YES"
+"64.227.70.114": "YES"
+"64.227.3.193": "YES"
+"71.208.121.109": "YES"
+"69.112.109.213": "YES"
+"68.183.81.16": "YES"
+"68.183.113.196": "YES"
+"74.218.155.146": "YES"
+"73.138.255.7": "YES"
+"73.112.124.197": "YES"
+"72.46.223.98": "YES"
+"72.252.176.66": "YES"
+"71.81.145.108": "YES"
+"78.128.15.237": "YES"
+"78.106.73.176": "YES"
+"75.65.107.18": "YES"
+"78.71.183.200": "YES"
+"78.47.129.105": "YES"
+"78.189.50.118": "YES"
+"79.188.64.237": "YES"
+"79.44.59.155": "YES"
+"79.181.227.175": "YES"
+"79.143.160.90": "YES"
+"79.13.32.239": "YES"
+"79.130.252.47": "YES"
+"79.118.226.204": "YES"
+"79.117.255.243": "YES"
+"81.218.162.85": "YES"
+"81.215.199.148": "YES"
+"81.163.61.223": "YES"
+"80.56.237.39": "YES"
+"82.233.232.25": "YES"
+"81.92.202.160": "YES"
+"81.52.152.157": "YES"
+"83.40.93.236": "YES"
+"83.255.90.77": "YES"
+"83.254.185.201": "YES"
+"83.12.179.145": "YES"
+"85.202.233.162": "YES"
+"85.105.208.25": "YES"
+"84.43.175.193": "YES"
+"84.241.47.4": "YES"
+"84.238.50.127": "YES"
+"84.228.82.241": "YES"
+"86.124.98.74": "YES"
+"85.56.136.82": "YES"
+"85.242.94.117": "YES"
+"85.229.106.121": "YES"
+"87.76.10.89": "YES"
+"89.154.205.42": "YES"
+"89.117.178.145": "YES"
+"88.225.229.42": "YES"
+"89.237.194.121": "YES"
+"89.229.167.1": "YES"
+"89.212.127.179": "YES"
+"91.223.105.82": "YES"
+"91.124.163.34": "YES"
+"92.113.194.134": "YES"
+"94.73.2.139": "YES"
+"94.70.255.69": "YES"
+"94.60.173.6": "YES"
+"94.59.163.134": "YES"
+"94.23.33.203": "YES"
+"95.9.39.148": "YES"
+"95.86.41.121": "YES"
+"95.52.94.198": "YES"
+"95.248.182.103": "YES"
+"95.135.222.250": "YES"
+"95.13.10.210": "YES"
+"101.205.158.121": "YES"
+"101.16.139.78": "YES"
+"101.132.117.99": "YES"
+"100.38.139.110": "YES"
+"103.197.199.89": "YES"
+"103.115.126.69": "YES"
+"103.114.106.240": "YES"
+"103.113.69.73": "YES"
+"102.189.252.86": "YES"
+"102.184.134.174": "YES"
+"101.36.138.88": "YES"
+"103.43.4.52": "YES"
+"103.42.224.36": "YES"
+"103.252.41.117": "YES"
+"103.246.224.110": "YES"
+"103.90.158.226": "YES"
+"107.173.129.18": "YES"
+"106.54.86.131": "YES"
+"106.53.77.80": "YES"
+"106.40.150.207": "YES"
+"106.116.99.50": "YES"
+"106.1.91.204": "YES"
+"109.130.151.84": "YES"
+"108.61.253.27": "YES"
+"111.241.123.135": "YES"
+"111.207.1.170": "YES"
+"111.202.190.32": "YES"
+"111.201.227.16": "YES"
+"111.201.151.220": "YES"
+"111.197.21.54": "YES"
+"111.173.78.127": "YES"
+"111.17.161.135": "YES"
+"111.246.145.116": "YES"
+"112.161.62.42": "YES"
+"112.117.98.117": "YES"
+"111.63.34.241": "YES"
+"113.118.25.48": "YES"
+"113.100.73.218": "YES"
+"112.78.188.155": "YES"
+"112.198.149.68": "YES"
+"112.187.52.151": "YES"
+"113.25.178.184": "YES"
+"113.199.107.20": "YES"
+"113.181.34.139": "YES"
+"113.163.184.35": "YES"
+"114.32.21.178": "YES"
+"114.199.170.186": "YES"
+"113.70.212.72": "YES"
+"114.33.25.84": "YES"
+"114.33.179.16": "YES"
+"115.52.72.174": "YES"
+"114.41.0.41": "YES"
+"114.40.133.4": "YES"
+"115.79.179.204": "YES"
+"115.77.132.236": "YES"
+"116.22.6.95": "YES"
+"116.139.251.6": "YES"
+"117.0.192.87": "YES"
+"116.99.179.87": "YES"
+"116.98.230.29": "YES"
+"122.160.113.212": "YES"
+"123.166.132.132": "YES"
+"123.157.138.134": "YES"
+"123.115.113.226": "YES"
+"123.4.241.199": "YES"
+"123.244.90.229": "YES"
+"123.240.118.28": "YES"
+"123.232.125.162": "YES"
+"123.204.10.212": "YES"
+"123.203.179.68": "YES"
+"123.202.145.209": "YES"
+"123.195.114.130": "YES"
+"123.193.215.26": "YES"
+"123.99.120.187": "YES"
+"123.8.206.194": "YES"
+"124.65.8.126": "YES"
+"124.65.186.186": "YES"
+"124.42.66.32": "YES"
+"124.27.0.87": "YES"
+"124.195.207.87": "YES"
+"124.166.139.176": "YES"
+"124.163.101.74": "YES"
+"125.59.228.134": "YES"
+"125.214.49.142": "YES"
+"125.134.237.250": "YES"
+"124.91.185.163": "YES"
+"130.180.98.214": "YES"
+"129.204.187.250": "YES"
+"128.65.136.15": "YES"
+"51.38.140.5": "YES"
+"138.219.201.167": "YES"
+"131.72.91.240": "YES"
+"146.90.226.110": "YES"
+"144.76.170.114": "YES"
+"151.53.239.204": "YES"
+"151.52.84.99": "YES"
+"149.91.88.216": "YES"
+"51.75.191.213": "YES"
+"158.140.234.50": "YES"
+"158.140.138.243": "YES"
+"156.96.155.228": "YES"
+"156.227.25.29": "YES"
+"167.86.93.204": "YES"
+"167.172.170.36": "YES"
+"170.80.204.115": "YES"
+"171.241.61.80": "YES"
+"171.229.35.151": "YES"
+"171.226.163.100": "YES"
+"171.225.193.70": "YES"
+"171.223.229.175": "YES"
+"171.106.202.186": "YES"
+"171.100.222.26": "YES"
+"51.83.66.171": "YES"
+"171.96.99.162": "YES"
+"171.254.76.121": "YES"
+"171.250.103.216": "YES"
+"171.249.241.154": "YES"
+"171.248.46.194": "YES"
+"171.243.243.3": "YES"
+"175.168.61.156": "YES"
+"175.168.250.30": "YES"
+"175.158.134.232": "YES"
+"175.155.109.34": "YES"
+"175.149.113.196": "YES"
+"175.143.109.210": "YES"
+"173.166.254.186": "YES"
+"176.37.15.6": "YES"
+"176.24.49.80": "YES"
+"177.201.67.211": "YES"
+"177.189.135.214": "YES"
+"177.126.138.233": "YES"
+"177.125.185.86": "YES"
+"177.81.38.226": "YES"
+"177.76.250.161": "YES"
+"177.73.116.78": "YES"
+"177.41.214.57": "YES"
+"177.223.49.73": "YES"
+"178.46.214.141": "YES"
+"178.46.208.179": "YES"
+"177.99.77.47": "YES"
+"58.18.222.73": "YES"
+"180.115.175.186": "YES"
+"180.112.57.137": "YES"
+"179.218.27.60": "YES"
+"179.180.208.226": "YES"
+"178.74.104.94": "YES"
+"181.128.60.73": "YES"
+"180.143.124.48": "YES"
+"182.16.163.18": "YES"
+"182.127.142.53": "YES"
+"182.123.236.94": "YES"
+"182.117.185.241": "YES"
+"181.57.205.4": "YES"
+"182.71.151.210": "YES"
+"182.245.241.143": "YES"
+"182.226.87.165": "YES"
+"183.97.158.143": "YES"
+"183.78.208.206": "YES"
+"183.30.201.150": "YES"
+"183.251.171.99": "YES"
+"183.154.147.141": "YES"
+"183.142.222.148": "YES"
+"183.133.74.252": "YES"
+"58.143.98.213": "YES"
+"184.22.76.204": "YES"
+"185.11.146.159": "YES"
+"185.163.45.101": "YES"
+"185.202.243.120": "YES"
+"185.202.0.6": "YES"
+"185.202.0.18": "YES"
+"185.184.245.140": "YES"
+"185.163.192.19": "YES"
+"186.112.0.74": "YES"
+"185.93.153.188": "YES"
+"185.253.250.170": "YES"
+"185.241.52.57": "YES"
+"187.136.36.203": "YES"
+"187.111.170.162": "YES"
+"187.107.154.100": "YES"
+"187.105.113.241": "YES"
+"187.103.81.28": "YES"
+"186.216.153.87": "YES"
+"187.8.77.60": "YES"
+"187.250.107.9": "YES"
+"187.202.178.209": "YES"
+"187.192.22.255": "YES"
+"187.168.37.113": "YES"
+"187.145.45.104": "YES"
+"188.254.221.98": "YES"
+"188.247.85.184": "YES"
+"188.240.220.58": "YES"
+"188.223.40.73": "YES"
+"188.216.5.54": "YES"
+"188.16.144.207": "YES"
+"189.141.246.176": "YES"
+"188.75.233.24": "YES"
+"188.53.30.210": "YES"
+"190.162.122.140": "YES"
+"189.89.30.51": "YES"
+"189.253.227.94": "YES"
+"58.19.160.13": "YES"
+"190.52.99.27": "YES"
+"190.5.3.238": "YES"
+"190.44.36.214": "YES"
+"190.245.28.203": "YES"
+"192.162.173.135": "YES"
+"192.112.255.53": "YES"
+"58.210.177.12": "YES"
+"196.229.217.99": "YES"
+"196.188.115.251": "YES"
+"195.214.167.126": "YES"
+"195.174.37.214": "YES"
+"197.50.26.248": "YES"
+"197.44.78.168": "YES"
+"197.41.167.141": "YES"
+"197.251.221.122": "YES"
+"200.233.138.125": "YES"
+"201.103.60.204": "YES"
+"201.1.47.193": "YES"
+"200.7.127.1": "YES"
+"201.76.120.223": "YES"
+"203.150.113.115": "YES"
+"203.142.163.23": "YES"
+"203.115.97.54": "YES"
+"202.98.91.18": "YES"
+"202.96.244.44": "YES"
+"209.126.70.228": "YES"
+"208.96.76.10": "YES"
+"203.7.107.237": "YES"
+"203.70.208.56": "YES"
+"203.63.16.82": "YES"
+"122.117.245.88": "YES"
+"210.76.97.9": "YES"
+"211.229.56.214": "YES"
+"211.141.213.168": "YES"
+"211.111.237.52": "YES"
+"211.111.237.22": "YES"
+"212.252.133.28": "YES"
+"211.97.132.169": "YES"
+"211.237.116.9": "YES"
+"45.46.180.6": "YES"
+"213.248.136.82": "YES"
+"213.162.112.30": "YES"
+"212.66.46.204": "YES"
+"217.128.67.95": "YES"
+"218.164.107.22": "YES"
+"218.103.183.238": "YES"
+"46.177.75.198": "YES"
+"46.45.218.154": "YES"
+"220.87.213.71": "YES"
+"220.246.201.168": "YES"
+"46.0.204.17": "YES"
+"60.168.96.127": "YES"
+"222.127.51.197": "YES"
+"121.46.30.188": "YES"
+"121.151.193.6": "YES"
+"122.112.150.234": "YES"
+"46.101.22.138": "YES"
+"121.122.116.8": "YES"
+"46.33.251.77": "YES"
+"121.132.99.204": "YES"
+"121.155.179.155": "YES"
+"120.14.23.24": "YES"
+"119.203.9.192": "YES"
+"119.237.136.199": "YES"
+"119.42.67.152": "YES"
+"47.21.74.14": "YES"
+"118.254.102.136": "YES"
+"49.204.2.242": "YES"
+"118.39.76.146": "YES"
+"121.86.208.206": "YES"
+"118.41.210.75": "YES"
+"118.43.105.17": "YES"
+"118.112.108.122": "YES"
+"116.108.105.213": "YES"
+"116.110.213.189": "YES"
+"116.2.223.227": "YES"
+"117.12.195.110": "YES"
+"119.177.54.117": "YES"
+"116.224.120.58": "YES"
+"116.104.93.158": "YES"
+"116.108.110.41": "YES"
+"115.73.5.140": "YES"
+"115.55.34.69": "YES"
+"116.100.211.51": "YES"
+"115.55.70.12": "YES"
+"116.48.84.158": "YES"
+"116.102.187.83": "YES"
+"116.49.141.39": "YES"
+"115.77.252.200": "YES"
+"116.100.38.149": "YES"
+"115.165.211.198": "YES"
+"115.165.214.134": "YES"
+"113.161.146.159": "YES"
+"113.226.63.217": "YES"
+"115.171.61.181": "YES"
+"115.49.3.15": "YES"
+"116.212.180.2": "YES"
+"113.25.162.224": "YES"
+"114.246.34.131": "YES"
+"113.161.61.77": "YES"
+"113.230.220.53": "YES"
+"121.233.41.70": "YES"
+"120.244.154.172": "YES"
+"120.244.154.84": "YES"
+"120.244.234.66": "YES"
+"112.185.82.209": "YES"
+"120.244.56.170": "YES"
+"115.59.224.248": "YES"
+"118.160.89.21": "YES"
+"118.168.33.229": "YES"
+"117.4.192.181": "YES"
+"112.186.160.229": "YES"
+"112.254.106.212": "YES"
+"112.186.22.152": "YES"
+"223.15.146.15": "YES"
+"223.15.55.0": "YES"
+"218.84.160.126": "YES"
+"113.128.235.96": "YES"
+"219.150.204.152": "YES"
+"222.190.151.98": "YES"
+"223.16.111.25": "YES"
+"220.185.29.169": "YES"
+"223.212.68.12": "YES"
+"223.29.196.250": "YES"
+"222.240.121.182": "YES"
+"222.240.123.134": "YES"
+"222.210.78.105": "YES"
+"221.219.106.56": "YES"
+"221.219.59.99": "YES"
+"222.83.134.96": "YES"
+"222.129.198.218": "YES"
+"222.140.6.74": "YES"
+"222.140.6.78": "YES"
+"220.142.45.210": "YES"
+"220.143.10.46": "YES"
+"217.27.121.13": "YES"
+"218.241.249.0": "YES"
+"221.202.199.49": "YES"
+"221.210.211.21": "YES"
+"220.135.117.2": "YES"
+"211.112.104.16": "YES"
+"218.67.20.9": "YES"
+"220.133.193.213": "YES"
+"218.63.77.161": "YES"
+"211.198.127.220": "YES"
+"221.214.233.176": "YES"
+"218.84.243.201": "YES"
+"210.178.73.192": "YES"
