--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -5,7 +5,8 @@ input {
         type => syslog
         add_field => {"log_type" => "PF_Audit_Log"}
         codec => multiline {
-            pattern => "^\s"
+            pattern => "^%{TIMESTAMP_ISO8601} "
+            negate => true
             what => "previous"
         }
     }
@@ -16,7 +17,8 @@ input {
         type => syslog
         add_field => {"log_type" => "PF_Provisioner_Log"}
         codec => multiline {
-            pattern => "^\s"
+            pattern => "^%{TIMESTAMP_ISO8601} "
+            negate => true
             what => "previous"
         }
     }
@@ -38,7 +40,8 @@ input {
         type => syslog
         add_field => {"log_type" => "PF_System_Log"}
         codec => multiline {
-            pattern => "^\s"
+            pattern => "^%{TIMESTAMP_ISO8601} "
+            negate => true
             what => "previous"
         }
     }
@@ -49,7 +52,8 @@ input {
         type => syslog
         add_field => {"log_type" => "PA_System_Log"}
         codec => multiline {
-            pattern => "^\s"
+            pattern => "^%{TIMESTAMP_ISO8601} "
+            negate => true
             what => "previous"
         }
     }
@@ -60,7 +64,8 @@ input {
         type => syslog
         add_field => {"log_type" => "PA_Audit_Log"}
         codec => multiline {
-            pattern => "^\s"
+            pattern => "^%{TIMESTAMP_ISO8601} "
+            negate => true
             what => "previous"
         }
     }
