testing multiline codec issues

--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -4,11 +4,11 @@ input {
         port => 20514
         type => syslog
         add_field => {"log_type" => "PF_Audit_Log"}
-        codec => multiline {
-            pattern => "^%{TIMESTAMP_ISO8601} "
-            negate => true
-            what => "previous"
-        }
+        #codec => multiline {
+        #    pattern => "^%{TIMESTAMP_ISO8601} "
+        #    negate => true
+        #    what => "previous"
+        #}
     }
 
     syslog {
@@ -16,11 +16,11 @@ input {
         port => 20515
         type => syslog
         add_field => {"log_type" => "PF_Provisioner_Log"}
-        codec => multiline {
-            pattern => "^%{TIMESTAMP_ISO8601} "
-            negate => true
-            what => "previous"
-        }
+        #codec => multiline {
+        #    pattern => "^%{TIMESTAMP_ISO8601} "
+        #    negate => true
+        #    what => "previous"
+        #}
     }
 
     syslog {
@@ -39,11 +39,11 @@ input {
         port => 20517
         type => syslog
         add_field => {"log_type" => "PF_System_Log"}
-        codec => multiline {
-            pattern => "^%{TIMESTAMP_ISO8601} "
-            negate => true
-            what => "previous"
-        }
+        #codec => multiline {
+        #    pattern => "^%{TIMESTAMP_ISO8601} "
+        #    negate => true
+        #    what => "previous"
+        #}
     }
 
     syslog {
@@ -51,11 +51,11 @@ input {
         port => 20518
         type => syslog
         add_field => {"log_type" => "PA_System_Log"}
-        codec => multiline {
-            pattern => "^%{TIMESTAMP_ISO8601} "
-            negate => true
-            what => "previous"
-        }
+        #codec => multiline {
+        #    pattern => "^%{TIMESTAMP_ISO8601} "
+        #    negate => true
+        #    what => "previous"
+        #}
     }
 
     syslog {
@@ -63,11 +63,11 @@ input {
         port => 20519
         type => syslog
         add_field => {"log_type" => "PA_Audit_Log"}
-        codec => multiline {
-            pattern => "^%{TIMESTAMP_ISO8601} "
-            negate => true
-            what => "previous"
-        }
+        #codec => multiline {
+        #    pattern => "^%{TIMESTAMP_ISO8601} "
+        #    negate => true
+        #    what => "previous"
+        #}
     }
 }
 
