Multiline support for PA Audit, PF Audit, PF System

--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -16,11 +16,6 @@ input {
         port => 20515
         type => syslog
         add_field => {"log_type" => "PF_Provisioner_Log"}
-        #codec => multiline {
-        #    pattern => "^%{TIMESTAMP_ISO8601} "
-        #    negate => true
-        #    what => "previous"
-        #}
     }
 
     syslog {
@@ -51,11 +46,6 @@ input {
         port => 20518
         type => syslog
         add_field => {"log_type" => "PA_System_Log"}
-        #codec => multiline {
-        #    pattern => "^%{TIMESTAMP_ISO8601} "
-        #    negate => true
-        #    what => "previous"
-        #}
     }
 
     syslog {
@@ -109,9 +99,10 @@ filter{
             columns => ["long_log_timestamp","event_time","company_name","product_name","log_type_stamp","pfversion","event_type","cycle_id","channel_id","event_type","source_id","target_id","is_success","non_success_cause"]
             separator => "| "
         }
-        #mutate {
-        #    remove_field => "[message]"
-        #}
+        mutate {
+            remove_field => "[message]"
+            remove_field => "[tags]"
+        }
     }
 
     if([log_type] == "PD_Access_Log"){
@@ -153,9 +144,10 @@ filter{
             refresh_behaviour => "replace"
         }
 
-        #mutate {
-        #    remove_field => "[message]"
-        #}
+        mutate {
+            remove_field => "[message]"
+            remove_field => "[tags]"
+        }
     }
 
     if([log_type] == "PF_System_Log"){
@@ -164,9 +156,10 @@ filter{
             value_split => "="
         }
 
-        #mutate {
-        #    remove_field => "[message]"
-        #}
+        mutate {
+            remove_field => "[message]"
+            remove_field => "[tags]"
+        }
 
     }
 
@@ -196,15 +189,21 @@ filter{
             refresh_behaviour => "replace"
         }
 
-        #mutate {
-        #    remove_field => "[message]"
-        #}
+        mutate {
+            remove_field => "[message]"
+            remove_field => "[tags]"
+        }
     }
 
     if([log_type] == "PA_System_Log"){
         kv {
             source => "[message]"
             value_split => "="
+        }
+
+        mutate {
+            remove_field => "[message]"
+            remove_field => "[tags]"
         }
     }
 }
