--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -35,7 +35,7 @@ input {
         type => syslog
         add_field => {"log_type" => "PF_System_Log"}
         codec => multiline {
-            pattern => "^<[0-9][0-9][0-9]>"
+            pattern => "^%{TIMESTAMP_ISO8601} "
             negate => true
             what => "previous"
         }
@@ -156,10 +156,10 @@ filter{
             value_split => "="
         }
 
-        mutate {
-            remove_field => "[message]"
-            remove_field => "[tags]"
-        }
+        #mutate {
+        #    remove_field => "[message]"
+        #    remove_field => "[tags]"
+        #}
 
     }
 
@@ -274,5 +274,16 @@ output{
             user => "elastic"
             password => "${ELASTIC_PASSWORD}"
         }
-    }  
+    }
+    else{
+        elasticsearch {
+            id => "unmatched"
+            ssl => true
+            ssl_certificate_verification => false
+            hosts => ["https://es01:9200","https://es02:9200"]
+            index => "unknown-%{+YYYY.MM.dd}"
+            user => "elastic"
+            password => "${ELASTIC_PASSWORD}"
+        }
+    }   
 }
