still working on multiline issues

--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -34,11 +34,11 @@ input {
         port => 20517
         type => syslog
         add_field => {"log_type" => "PF_System_Log"}
-        codec => multiline {
-            pattern => "^%{TIMESTAMP_ISO8601} "
-            negate => true
-            what => "previous"
-        }
+        #codec => multiline {
+        #    pattern => "^%{TIMESTAMP_ISO8601} "
+        #    negate => true
+        #    what => "previous"
+        #}
     }
 
     syslog {
@@ -274,16 +274,5 @@ output{
             user => "elastic"
             password => "${ELASTIC_PASSWORD}"
         }
-    }
-    else{
-        elasticsearch {
-            id => "unmatched"
-            ssl => true
-            ssl_certificate_verification => false
-            hosts => ["https://es01:9200","https://es02:9200"]
-            index => "unknown-%{+YYYY.MM.dd}"
-            user => "elastic"
-            password => "${ELASTIC_PASSWORD}"
-        }
-    }   
+    }  
 }
