--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -34,11 +34,11 @@ input {
         port => 20517
         type => syslog
         add_field => {"log_type" => "PF_System_Log"}
-        #codec => multiline {
-        #    pattern => "^%{TIMESTAMP_ISO8601} "
-        #    negate => true
-        #    what => "previous"
-        #}
+        codec => multiline {
+            pattern => "^<[0-9][0-9][0-9]>"
+            negate => true
+            what => "previous"
+        }
     }
 
     syslog {
