removed kv filter as XML is causing issues

--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -151,10 +151,10 @@ filter{
     }
 
     if([log_type] == "PF_System_Log"){
-        kv {
-            source => "[message]"
-            value_split => "="
-        }
+        #kv {
+        #    source => "[message]"
+        #    value_split => "="
+        #}
 
         #mutate {
         #    remove_field => "[message]"
