Changing split char for PF System to &#96;

--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -151,16 +151,15 @@ filter{
     }
 
     if([log_type] == "PF_System_Log"){
-        #kv {
-        #    source => "[message]"
-        #    value_split => "="
-        #}
+        kv {
+            source => "[message]"
+            value_split => "`"
+        }
 
-        #mutate {
-        #    remove_field => "[message]"
-        #    remove_field => "[tags]"
-        #}
-
+        mutate {
+            remove_field => "[message]"
+            remove_field => "[tags]"
+        }
     }
 
     if([log_type] == "PA_Audit_Log"){
