new split method

--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -153,7 +153,7 @@ filter{
     if([log_type] == "PF_System_Log"){
         kv {
             source => "[message]"
-            value_split => "="
+            value_split => "^"
             field_split => "`"
         }
 
