yet again testing another PF split

--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -155,6 +155,8 @@ filter{
             source => "[message]"
             value_split => "\^"
             field_split => "`"
+            default_keys => [ "trackingid", "null"
+            include_keys => [ "date", "messagesource", "messagedetail", "loglevel", "trackingid" ]
         }
 
         mutate {
