pf audit pattern modification

--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -66,8 +66,12 @@ filter{
     if([log_type] == "PF_Audit_Log"){
         kv {
             source => "[message]"
-            value_split => "="
+            value_split => "\^"
+            field_split => "`"
+            default_keys => [ "date", "null", "event", "null", "trackingid", "null", "subject", "null", "ip", "null", "app", "null", "connectionid", "null", "protocol", "null", "pfhost", "null", "role", "null", "status", "null", "adapterid", "null", "description", "null", "responsetime", "null", "inmessagetype", "null" ]
+            include_keys => [ "date", "event", "trackingid", "subject", "ip", "app", "connectionid", "protocol", "pfhost", "role", "status", "adapterid", "description", "responsetime", "inmessagetype" ]
         }
+
         geoip {
             source => "ip"
         }
