adjusted PF Audit tested local, works

--- a/elasticsearch-siem/logstash/conf.d/logstash.conf
+++ b/elasticsearch-siem/logstash/conf.d/logstash.conf
@@ -92,9 +92,9 @@ filter{
             refresh_behaviour => "replace"
         }
 
-        #mutate {
-        #    remove_field => "[message]"
-        #}
+        mutate {
+            remove_field => "[message]"
+        }
     }
 
     #Log4J Pattern
